--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ff00ff;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ff00ff;
+  box-shadow: 0 0 2px 1px #ff00ff;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #222;
+}
